--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      sophomorePortfolio
+    </title>
+    <link href="mystyle.css" type="text/css" rel="stylesheet">"
+  </head>
 
+  <body>
+     <h1>My Portfolio</h1>
